# genshin-ai

./: .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
docs/: architecture.md  roadmap.md
src/genshin_ai/: __init__.py  cli.py
src/genshin_ai/core/: __init__.py  config.py  logging.py  runtime.py  session.py
src/genshin_ai/evaluation/: __init__.py
src/genshin_ai/execution/: __init__.py
src/genshin_ai/perception/: __init__.py  benchmark.py  capture.py  frame.py  metrics.py  preprocess.py  regions.py  replay.py  roi_manifest.py  screen_capture.py
src/genshin_ai/planning/: __init__.py
src/genshin_ai/state/: __init__.py
tests/: test_capture.py  test_capture_benchmark.py  test_capture_metrics.py  test_config.py  test_logging.py  test_preprocess.py  test_regions.py  test_replay.py  test_roi_manifest.py  test_runtime.py  test_sanity.py  test_screen_capture.py  test_session.py
