[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genshin-ai"
version = "0.1.0"
description = "Research-oriented visual AI agent architecture for Genshin Impact."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Arthur Paraiso Martins" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
capture = [
    "mss>=9.0.0",
]
image = [
    "Pillow>=10.0.0",
]

[project.scripts]
genshin-ai = "genshin_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
